--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,151 @@
-/* Your styles here */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  color: #393d41;
+  font-size: 1.2rem;
+  font-family: "Open Sans", sans-serif;
+  line-height: 1.65rem;
+  text-align: center;
+  width: 100%;
+}
+
+h1,
+h4 {
+  color: #25a2c3;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  line-height: 2.3rem;
+}
+
+.footer,
+.contatti a:link,
+.contatti a:visited {
+  color: #c8e7f0;
+}
+
+h2 {
+  color: white;
+  font-family: "Montserrat", sans-serif;
+}
+
+.header {
+  background-color: black;
+  width: 100%;
+}
+
+.header img {
+  width: 40%;
+  margin: 40px;
+}
+
+.banner {
+  background-image: url(../img/banner.jpg);
+  background-size: cover;
+  padding: 40px 100px;
+  background-position: center;
+}
+
+img {
+  width: 100%;
+}
+
+h1 {
+  font-size: 2em;
+}
+
+.banner div a {
+  display: inline-block;
+  background-color: #f04c2f;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  padding: 15px;
+  border-radius: 8px;
+}
+
+.banner div p {
+  margin-bottom: 40px;
+}
+
+.banner div a:link,
+.banner div a:visited {
+  color: white;
+  text-decoration: none;
+}
+
+.banner div a:hover {
+  text-decoration: underline;
+}
+
+.advantage,
+.benefits {
+  width: 80%;
+  margin: 50px auto;
+}
+
+.benefits h4 {
+  margin-bottom: 0;
+}
+
+.benefits img {
+  border-radius: 50%;
+  margin: 10px 0;
+}
+
+.citazione {
+  background-color: #f04c2f;
+  color: white;
+  padding: 40px 15px;
+}
+
+blockquote {
+  font-style: italic;
+}
+.citazione cite {
+  display: block;
+  font-style: normal;
+  margin: 40px 0 0;
+}
+
+.citazione cite span {
+  font-size: 1.3em;
+  display: block;
+  margin: 5px 0;
+}
+
+.advantage div {
+  margin: 40px 0;
+  border: 1px solid #dee1e3;
+  border-radius: 0 0 5px 5px;
+}
+
+.advantage h4 {
+  margin-bottom: 0;
+}
+
+.advantage p {
+  margin: 10px 15px 40px;
+}
+
+.footer {
+  background-color: #25a2c3;
+  padding: 30px;
+}
+
+.contatti {
+  list-style-type: none;
+  padding-inline-start: 0;
+}
+
+.footer p {
+  margin: 30px 85px 0;
+  border-top: 1px solid white;
+  padding: 30px 0;
+}
+
+.footer p span {
+  text-decoration: underline;
+}
