--- a/assets/css/style-desktop.css
+++ b/assets/css/style-desktop.css
@@ -40,7 +40,7 @@ h2 {
 }
 
 .header img {
-    width: 20%;
+    width: 15%;
     margin: 20px;
     
 
@@ -50,7 +50,7 @@ h2 {
     background-image: url(../img/banner.jpg);
     background-size: cover;
     
-    padding: 40px 100px;
+    padding: 40px 30vw;
     background-position: top;
 }
 
@@ -67,7 +67,7 @@ h1 {
     font-weight: bold;
     padding: 15px;
     border-radius: 8px;
-    margin:0 0 60px;
+    margin: 0 0 10vh;
 }
 
 .banner div p {
@@ -94,10 +94,14 @@ h1 {
     margin: 0;
 }
 
+
+
 .benefitsimg img {
     border-radius: 50%;
     margin: 10px 0;
-    width: 80%;
+    width: 350px;
+    
+    
 }
 
 .benefits {
@@ -106,6 +110,7 @@ h1 {
 
 .benefitstext {
     text-align: left;
+    
 }
 
 .benefitstext p {
@@ -136,7 +141,7 @@ blockquote {
 
 .advantage img {
     width: 100%;
-    height: 220px;
+    height: 25vh;
 }
 
 .advantage div {
