--- a/assets/css/style-desktop.css
+++ b/assets/css/style-desktop.css
@@ -86,15 +86,18 @@ h1 {
 
 
 .benefitsimg, .benefitstext {
-    width: 45%;
+    width: 40%;
     display: inline-block;
+    margin: 20px;
 }
 
-.benefits h4 {
+.benefitstext h4 {
     margin: 0;
 }
 
-
+.benefitsimg {
+    text-align: right;
+}
 
 .benefitsimg img {
     border-radius: 50%;
