--- a/assets/css/style-desktop.css
+++ b/assets/css/style-desktop.css
@@ -60,30 +60,20 @@ h1 {
     margin-top: 50px;
 }
 
-.banner div a {
-    display: inline-block;
+.banner div a button {
     background-color: #f04c2f;
     font-family: "Montserrat", sans-serif;
     font-weight: bold;
-    padding: 15px;
-    border-radius: 8px;
+    padding: 10px 25px;
+    border-radius: 5px;
+    color: white;
+    border: none;
     margin: 0 0 10vh;
 }
-
+    
 .banner div p {
     margin-bottom: 20px;
 }
-
-.banner div a:link,
-.banner div a:visited {
-    color: white;
-    text-decoration: none;
-}
-
-.banner div a:hover {
-    text-decoration: underline;
-}
-
 
 .benefitsimg, .benefitstext {
     width: 40%;
@@ -103,8 +93,6 @@ h1 {
     border-radius: 50%;
     margin: 10px 0;
     width: 350px;
-    
-    
 }
 
 .benefits {
