--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,27 +57,19 @@ h1 {
   font-size: 2em;
 }
 
-.banner div a {
-  display: inline-block;
+.banner div a button {
   background-color: #f04c2f;
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
-  padding: 15px;
-  border-radius: 8px;
+  padding: 10px 25px;
+  border-radius: 5px;
+  color: white;
+  border: none;
+  
 }
 
 .banner div p {
   margin-bottom: 40px;
-}
-
-.banner div a:link,
-.banner div a:visited {
-  color: white;
-  text-decoration: none;
-}
-
-.banner div a:hover {
-  text-decoration: underline;
 }
 
 .advantage,
